# dispachai-api

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  schema.yml  sonar-project.properties
.claude/rules/: architecture.md  commission.md  linting.md  payments.md  planning.md  schema.md  testing.md
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  payments.instructions.md  testing.instructions.md
.github/prompts/: new-payment-type.prompt.md  plan-feature.prompt.md
.github/workflows/: lint.yml  sonar.yml  test.yml
api/: settings.py  urls.py
despacho/: apps.py  models.py  serializers.py  urls.py  views.py
despacho/migrations/: 0001_initial.py  0002_rename_data_criacao_processo_criado_em_and_more.py  0003_alter_advogado_comissao_padrao.py  0004_alter_corretor_comissao_padrao_and_more.py  0005_pagamento_remove_processo_valor_total_and_more.py  0006_remove_pagamento_processo_and_more.py
despacho/tests/: test_advogado.py
dispachai/: asgi.py  settings.py  urls.py  wsgi.py
dispachai/despacho/: __init__.py  apps.py  models.py  serializers.py  views.py
identity/: permissions.py  serializers.py  urls.py  views.py
identity/serializers/: __init__.py
identity/tests/: test_permissions.py  test_serializers.py  test_views.py
pagamento/: filter.py  models.py  serializers.py  urls.py  views.py
pagamento/migrations/: 0001_initial.py  0002_alter_pagamento_processo.py  0002_rename_nome_processo_processo_cliente.py  0003_pagamentocontrato_vencimento_parcela.py  0003_pagamentoimplantacao_data_pagamento.py  0004_alter_processo_criado_em.py  0004_pagamentocontrato_data_inicio_pagamento.py  0005_alter_processo_criado_em.py  0005_rename_data_inicio_pagamento_pagamentocontrato_vencimento_entrada_and_more.py  0006_alter_processo_criado_em.py  0006_rename_meses_pagamentocontrato_numero_parcelas.py  0007_processo_observacao.py  (+10 more)
pessoa/: models.py  serializers.py  tests.py  urls.py  views.py
(+27 files in other folders)
