[project]
name = "dispachai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "dj-database-url>=3.0.1",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-rest-knox>=5.0.2",
    "django-silk>=5.4.3",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.0",
    "ipdb>=0.13.13",
    "ruff>=0.9.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "manage.py",
    "api/settings.py",
    "api/wsgi.py",
    "api/asgi.py",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = coverage.xml
